Bug 1503870 - Should look good in dark mode. r=bhackett
Differential Revision: https://phabricator.services.mozilla.com/D43349

UltraBlame original commit: 969bbf292e174b641fde2434fa86c84c04e00918

--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -3123,6 +3123,59 @@ height
 ;
 -
 -
+progressbar
+-
+transition
+:
+200ms
+;
+-
+-
+command
+-
+button
+-
+size
+:
+14px
+;
+-
+-
+command
+-
+button
+-
+primary
+-
+size
+:
+20px
+;
+}
+.
+theme
+-
+light
+.
+webreplay
+-
+player
+{
+-
+-
+commandbar
+-
+button
+-
+hover
+-
+background
+:
+#
+efefef
+;
+-
+-
 progress
 -
 recording
@@ -3154,16 +3207,6 @@ hsl
 97
 %
 )
-;
--
--
-progress
--
-bar
--
-transition
-:
-200ms
 ;
 -
 -
@@ -3207,13 +3250,141 @@ hsl
 ;
 -
 -
-command
+replaying
 -
-button
+marker
 -
-size
+background
 :
-14px
+var
+(
+-
+-
+blue
+-
+40
+)
+;
+-
+-
+replaying
+-
+marker
+-
+background
+-
+hover
+:
+var
+(
+-
+-
+blue
+-
+60
+)
+;
+-
+-
+progress
+-
+recording
+-
+line
+:
+#
+d0021b
+;
+-
+-
+progressbar
+-
+background
+:
+#
+fff
+;
+-
+-
+progressbar
+-
+line
+-
+color
+:
+var
+(
+-
+-
+blue
+-
+40
+)
+;
+-
+-
+proggressbar
+-
+border
+-
+color
+:
+#
+bfc9d2
+;
+-
+-
+tick
+-
+future
+-
+background
+:
+#
+bfc9d2
+;
+-
+-
+tick
+-
+background
+:
+var
+(
+-
+-
+blue
+-
+50
+)
+;
+-
+-
+tick
+-
+recording
+-
+background
+:
+#
+d0021b
+;
+-
+-
+replay
+-
+head
+-
+background
+:
+var
+(
+-
+-
+purple
+-
+50
+)
 ;
 -
 -
@@ -3221,11 +3392,218 @@ command
 -
 button
 -
-primary
--
-size
+background
 :
-20px
+#
+6a6a6a
+;
+}
+.
+theme
+-
+dark
+.
+webreplay
+-
+player
+{
+-
+-
+commandbar
+-
+button
+-
+hover
+-
+background
+:
+#
+1a1a1a
+;
+-
+-
+progress
+-
+recording
+-
+background
+:
+#
+310707
+;
+-
+-
+progress
+-
+playing
+-
+background
+:
+#
+071a2b
+;
+-
+-
+progress
+-
+recording
+-
+line
+:
+#
+ff2038
+;
+-
+-
+recording
+-
+marker
+-
+background
+:
+#
+9b3131
+;
+-
+-
+recording
+-
+marker
+-
+background
+-
+hover
+:
+#
+a82323
+;
+-
+-
+replaying
+-
+marker
+-
+background
+:
+#
+266fb1
+;
+-
+-
+replaying
+-
+marker
+-
+background
+-
+hover
+:
+#
+3a8edb
+;
+-
+-
+progressbar
+-
+background
+:
+#
+0c0c0d
+;
+-
+-
+proggressbar
+-
+border
+-
+color
+:
+#
+31313d
+;
+-
+-
+progressbar
+-
+line
+-
+color
+:
+#
+0a4786
+;
+-
+-
+tick
+-
+future
+-
+background
+:
+#
+bfc9d2
+;
+-
+-
+tick
+-
+background
+:
+var
+(
+-
+-
+blue
+-
+50
+)
+;
+-
+-
+tick
+-
+recording
+-
+background
+:
+#
+e77884
+;
+-
+-
+replay
+-
+head
+-
+background
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+-
+-
+command
+-
+button
+-
+background
+:
+var
+(
+-
+-
+grey
+-
+20
+)
 ;
 }
 .
@@ -3264,8 +3642,14 @@ height
 ;
 background
 :
-#
-fff
+var
+(
+-
+-
+progressbar
+-
+background
+)
 ;
 margin
 :
@@ -3278,8 +3662,16 @@ border
 :
 1px
 solid
-#
-bfc9d2
+var
+(
+-
+-
+proggressbar
+-
+border
+-
+color
+)
 ;
 overflow
 :
@@ -3328,9 +3720,7 @@ var
 (
 -
 -
-progress
--
-bar
+progressbar
 -
 transition
 )
@@ -3360,9 +3750,11 @@ var
 (
 -
 -
-purple
+replay
 -
-50
+head
+-
+background
 )
 ;
 width
@@ -3431,9 +3823,7 @@ var
 (
 -
 -
-progress
--
-bar
+progressbar
 -
 transition
 )
@@ -3489,9 +3879,11 @@ var
 (
 -
 -
-blue
+replaying
 -
-40
+marker
+-
+background
 )
 ;
 transition
@@ -3547,8 +3939,14 @@ border
 -
 color
 :
-#
-fff
+var
+(
+-
+-
+progressbar
+-
+background
+)
 ;
 }
 .
@@ -3726,9 +4124,13 @@ var
 (
 -
 -
-blue
+replaying
 -
-60
+marker
+-
+background
+-
+hover
 )
 ;
 cursor
@@ -3864,8 +4266,16 @@ size
 ;
 background
 :
-#
-6a6a6a
+var
+(
+-
+-
+command
+-
+button
+-
+background
+)
 ;
 align
 -
@@ -3951,8 +4361,18 @@ hover
 {
 background
 :
-#
-efefef
+var
+(
+-
+-
+commandbar
+-
+button
+-
+hover
+-
+background
+)
 ;
 cursor
 :
@@ -4066,9 +4486,11 @@ var
 (
 -
 -
-blue
+progressbar
 -
-40
+line
+-
+color
 )
 ;
 position
@@ -4092,9 +4514,7 @@ var
 (
 -
 -
-progress
--
-bar
+progressbar
 -
 transition
 )
@@ -4131,8 +4551,16 @@ line
 {
 background
 :
-#
-d0021b
+var
+(
+-
+-
+progress
+-
+recording
+-
+line
+)
 ;
 opacity
 :
@@ -4230,8 +4658,16 @@ after
 {
 background
 :
-#
-d0021b
+var
+(
+-
+-
+tick
+-
+recording
+-
+background
+)
 ;
 }
 .
@@ -4259,8 +4695,16 @@ after
 {
 background
 :
-#
-bfc9d2
+var
+(
+-
+-
+tick
+-
+future
+-
+background
+)
 ;
 }
 .
@@ -4288,9 +4732,9 @@ var
 (
 -
 -
-blue
+tick
 -
-50
+background
 )
 ;
 }
